; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Client.c_CtStartClient.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Client.c_CtStartClient.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_15__ = type { i32* }
%struct.TYPE_14__ = type { i32, %struct.TYPE_12__*, i64 }
%struct.TYPE_12__ = type { i32 }
%struct.TYPE_13__ = type { i32 }

@client = common dso_local global %struct.TYPE_15__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CtStartClient() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_14__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_13__, align 4
  %6 = load %struct.TYPE_15__*, %struct.TYPE_15__** @client, align 8
  %7 = icmp ne %struct.TYPE_15__* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %0
  br label %92

9:                                                ; preds = %0
  %10 = call i32 (...) @CiCheckOs()
  %11 = call %struct.TYPE_15__* (...) @CiNewClient()
  store %struct.TYPE_15__* %11, %struct.TYPE_15__** @client, align 8
  %12 = load %struct.TYPE_15__*, %struct.TYPE_15__** @client, align 8
  %13 = call i32 @CiInitKeep(%struct.TYPE_15__* %12)
  %14 = load %struct.TYPE_15__*, %struct.TYPE_15__** @client, align 8
  %15 = call i32 @CiStartRpcServer(%struct.TYPE_15__* %14)
  %16 = load %struct.TYPE_15__*, %struct.TYPE_15__** @client, align 8
  %17 = call i32 @CiInitSaver(%struct.TYPE_15__* %16)
  %18 = call i32* @NewListFast(i32* null)
  store i32* %18, i32** %2, align 8
  %19 = load %struct.TYPE_15__*, %struct.TYPE_15__** @client, align 8
  %20 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = call i32 @LockList(i32* %21)
  store i64 0, i64* %1, align 8
  br label %23

23:                                               ; preds = %59, %9
  %24 = load i64, i64* %1, align 8
  %25 = load %struct.TYPE_15__*, %struct.TYPE_15__** @client, align 8
  %26 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %25, i32 0, i32 0
  %27 = load i32*, i32** %26, align 8
  %28 = call i64 @LIST_NUM(i32* %27)
  %29 = icmp slt i64 %24, %28
  br i1 %29, label %30, label %62

30:                                               ; preds = %23
  %31 = load %struct.TYPE_15__*, %struct.TYPE_15__** @client, align 8
  %32 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %31, i32 0, i32 0
  %33 = load i32*, i32** %32, align 8
  %34 = load i64, i64* %1, align 8
  %35 = call i8* @LIST_DATA(i32* %33, i64 %34)
  %36 = bitcast i8* %35 to %struct.TYPE_14__*
  store %struct.TYPE_14__* %36, %struct.TYPE_14__** %3, align 8
  %37 = load %struct.TYPE_14__*, %struct.TYPE_14__** %3, align 8
  %38 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = call i32 @Lock(i32 %39)
  %41 = load %struct.TYPE_14__*, %struct.TYPE_14__** %3, align 8
  %42 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %41, i32 0, i32 2
  %43 = load i64, i64* %42, align 8
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %54

45:                                               ; preds = %30
  %46 = load i32*, i32** %2, align 8
  %47 = load %struct.TYPE_14__*, %struct.TYPE_14__** %3, align 8
  %48 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %47, i32 0, i32 1
  %49 = load %struct.TYPE_12__*, %struct.TYPE_12__** %48, align 8
  %50 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = call i32 @CopyUniStr(i32 %51)
  %53 = call i32 @Add(i32* %46, i32 %52)
  br label %54

54:                                               ; preds = %45, %30
  %55 = load %struct.TYPE_14__*, %struct.TYPE_14__** %3, align 8
  %56 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %55, i32 0, i32 0
  %57 = load i32, i32* %56, align 8
  %58 = call i32 @Unlock(i32 %57)
  br label %59

59:                                               ; preds = %54
  %60 = load i64, i64* %1, align 8
  %61 = add nsw i64 %60, 1
  store i64 %61, i64* %1, align 8
  br label %23

62:                                               ; preds = %23
  %63 = load %struct.TYPE_15__*, %struct.TYPE_15__** @client, align 8
  %64 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %63, i32 0, i32 0
  %65 = load i32*, i32** %64, align 8
  %66 = call i32 @UnlockList(i32* %65)
  store i64 0, i64* %1, align 8
  br label %67

67:                                               ; preds = %86, %62
  %68 = load i64, i64* %1, align 8
  %69 = load i32*, i32** %2, align 8
  %70 = call i64 @LIST_NUM(i32* %69)
  %71 = icmp slt i64 %68, %70
  br i1 %71, label %72, label %89

72:                                               ; preds = %67
  %73 = load i32*, i32** %2, align 8
  %74 = load i64, i64* %1, align 8
  %75 = call i8* @LIST_DATA(i32* %73, i64 %74)
  %76 = bitcast i8* %75 to i32*
  store i32* %76, i32** %4, align 8
  %77 = call i32 @Zero(%struct.TYPE_13__* %5, i32 4)
  %78 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %5, i32 0, i32 0
  %79 = load i32, i32* %78, align 4
  %80 = load i32*, i32** %4, align 8
  %81 = call i32 @UniStrCpy(i32 %79, i32 4, i32* %80)
  %82 = load %struct.TYPE_15__*, %struct.TYPE_15__** @client, align 8
  %83 = call i32 @CtConnect(%struct.TYPE_15__* %82, %struct.TYPE_13__* %5)
  %84 = load i32*, i32** %4, align 8
  %85 = call i32 @Free(i32* %84)
  br label %86

86:                                               ; preds = %72
  %87 = load i64, i64* %1, align 8
  %88 = add nsw i64 %87, 1
  store i64 %88, i64* %1, align 8
  br label %67

89:                                               ; preds = %67
  %90 = load i32*, i32** %2, align 8
  %91 = call i32 @ReleaseList(i32* %90)
  br label %92

92:                                               ; preds = %89, %8
  ret void
}

declare dso_local i32 @CiCheckOs(...) #1

declare dso_local %struct.TYPE_15__* @CiNewClient(...) #1

declare dso_local i32 @CiInitKeep(%struct.TYPE_15__*) #1

declare dso_local i32 @CiStartRpcServer(%struct.TYPE_15__*) #1

declare dso_local i32 @CiInitSaver(%struct.TYPE_15__*) #1

declare dso_local i32* @NewListFast(i32*) #1

declare dso_local i32 @LockList(i32*) #1

declare dso_local i64 @LIST_NUM(i32*) #1

declare dso_local i8* @LIST_DATA(i32*, i64) #1

declare dso_local i32 @Lock(i32) #1

declare dso_local i32 @Add(i32*, i32) #1

declare dso_local i32 @CopyUniStr(i32) #1

declare dso_local i32 @Unlock(i32) #1

declare dso_local i32 @UnlockList(i32*) #1

declare dso_local i32 @Zero(%struct.TYPE_13__*, i32) #1

declare dso_local i32 @UniStrCpy(i32, i32, i32*) #1

declare dso_local i32 @CtConnect(%struct.TYPE_15__*, %struct.TYPE_13__*) #1

declare dso_local i32 @Free(i32*) #1

declare dso_local i32 @ReleaseList(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
